# Code-Auto-Run

./: .env.example  .gitignore  AGENTS_NOTE_GOOGLE_DOCS_STOCK_SYSTEM_FINAL.md  PLANS.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: morning-run.yml
apps_script/: stock_writer.gs
config/: article_quality.yaml  banned_claims.yaml  genres.yaml  google_drive.yaml  risk_policy.yaml  runtime_window.yaml  tool_policy.yaml  youtube_research.yaml
docs/: OPERATIONS.md  SOURCE_POLICY.md  TOOLING_LOG.md
prompts/: article_writer.md  fact_checker.md  google_docs_writer.md  researcher.md  risk_checker.md  tool_discovery.md
scripts/: google-oauth-setup.ps1
src/: __init__.py  article_format.py  article_generator.py  banned_claims.py  config_loader.py  duplicate_checker.py  env_loader.py  google_auth_setup.py  google_drive_client.py  ledger.py  risk_checker.py  run_pipeline.py  runtime_window_guard.py  setup_check.py  tool_discovery_agent.py
tests/: test_article_format.py  test_article_generator.py  test_banned_claims.py  test_config_loader.py  test_duplicate_checker.py  test_google_drive_client.py  test_risk_checker.py  test_run_pipeline.py  test_runtime_window_guard.py  test_setup_check.py  test_tool_policy.py
